# salsify-file-app

./: .dockerignore  .env-local  .gitignore  Makefile  README.md  pyproject.toml  run.sh
LOCAL_PROD_DATA/: 1_100.txt  1_100_index.txt  shard_101_200.txt  shard_1_100_index.txt  shard_201_300.txt  shard_201_300_index.txt
commands/: create_index_file.py  locustfile.py
docker/: Dockerfile  docker-compose-single-instance.yml  docker-compose.yml  nginx.conf
file_api_app/: __main__.py  aiohttp_app.py  file_index_repository.py  file_reader.py  handlers.py  repository.py  settings.py
tests/: conftest.py  test_aiohttp_app.py  test_file_index_repository.py  test_repository.py
tests/test_data/: shard_101_200_index.txt  shard_1_100.txt
