[tool.ruff]
line-length = 80
target-version = "py313"

# Exclude files and directories
exclude = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "deprecated",
    ".venv",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

# Enable autofix for unused imports
fixable = ["F401", "E501"]  # F401 is the code for unused imports
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["file_api_app"]
combine-as-imports = true

[project]
name = "file_api_app"
version = "0.1.0"
description = "File API Application"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "aiofiles==23.1.0",
    "aiohttp>=3.11.0",
    "pydantic_settings==2.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-aiohttp",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["file_api_app"]
